tests/Fixtures/Torture/Bad/unknown_intrinsic_role.g
// EXPECT G017
@intrinsic(totally_bogus_role)
int func Foo() { return 0; }
kernel { entry func Main() { } }
